--- a/pages/4499.html
+++ b/pages/4499.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1615/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -351,14 +350,14 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_54238365f345746492a6796b1f4ac4b1f06e2398_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>dim = 1</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a>, <a class='existingWikiWord' href='/nlab/show/super+Riemann+surface'>super Riemann surface</a></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_56c11c7264594731f5d06b240819fd098729b978_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>dim = 1</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a>, <a class='existingWikiWord' href='/nlab/show/super+Riemann+surface'>super Riemann surface</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a></p>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_54238365f345746492a6796b1f4ac4b1f06e2398_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>dim = 2</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/K3+surface'>K3 surface</a></li>
+<li><math class='maruku-mathml' display='inline' id='mathml_56c11c7264594731f5d06b240819fd098729b978_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>dim = 2</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/K3+surface'>K3 surface</a></li>
 </ul>
 </li>
 
@@ -406,13 +405,13 @@ margin-left: 0em;
 <li id='Serre56'><a class='existingWikiWord' href='/nlab/show/Jean-Pierre+Serre'>Jean-Pierre Serre</a>, <em>Géométrie algébrique et géométrie analytique</em> Université de Grenoble. Annales de l’Institut Fourier 6: 1–42, (1956) doi:10.5802/aif.59, ISSN 0373-0956, MR 0082175</li>
 </ul>
 
-<p>which compares the categories of projective integral <math class='maruku-mathml' display='inline' id='mathml_54238365f345746492a6796b1f4ac4b1f06e2398_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}</annotation></semantics></math>-schemes of finite type with that of projective complex manifolds possibly with singularities. In</p>
+<p>which compares the categories of projective integral <math class='maruku-mathml' display='inline' id='mathml_56c11c7264594731f5d06b240819fd098729b978_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}</annotation></semantics></math>-schemes of finite type with that of projective complex manifolds possibly with singularities. In</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>Alexander Grothendieck</a>, <a class='existingWikiWord' href='/nlab/show/EGA'>SGA</a> I, Exposé XII</li>
 </ul>
 
-<p>this was generalized to acomparison of proper <math class='maruku-mathml' display='inline' id='mathml_54238365f345746492a6796b1f4ac4b1f06e2398_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}</annotation></semantics></math>-schemes locally of finite type and complex analytic spaces.</p>
+<p>this was generalized to a comparison of proper <math class='maruku-mathml' display='inline' id='mathml_56c11c7264594731f5d06b240819fd098729b978_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}</annotation></semantics></math>-schemes locally of finite type and complex analytic spaces.</p>
 
 <p>A good modern textbook account is in</p>
 
@@ -477,19 +476,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July  5, 2015 18:02:43 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (97.123.23.128)
+  <p>
+  Last revised on May  9, 2018 at 04:37:22.
+  See the <a href="https://ncatlab.org/nlab/history/GAGA" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/GAGA" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GAGA/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/GAGA" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GAGA" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/GAGA" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GAGA/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/GAGA" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GAGA" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/GAGA/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/GAGA" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/GAGA" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/GAGA" id="view_source" rel="nofollow">Source</a>
