--- a/pages/1788.html
+++ b/pages/1788.html
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -306,19 +307,21 @@ margin-left: 0em;
 <div id="revision">
     <p>David testing. Rod editing with defective cookies.</p>
 
-<p><span class='newWikiWord'>Initial Θ-data<a href='/nlab/new/Initial+%CE%98-data'>?</a></span></p>
+<p><span class='newWikiWord'>AAA.pdf<a href='/nlab/files/AAA.pdf'>?</a></span></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/initial+%CE%98-data'>Initial Θ-data</a></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 28, 2018 at 09:55:34.
+  Last revised on May  9, 2018 at 10:53:34.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1502" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1502 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1503" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1503 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
