--- a/pages/15677.html
+++ b/pages/15677.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,15 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='properties'>Properties</h2>
+    <h2 id='definition'>Definition</h2>
+
+<p>The ideal class group <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mi>K</mi></msub></mrow><annotation encoding='application/x-tex'>C_K</annotation></semantics></math> of a number field <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> is defined as the group of fractional ideals of <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒪</mi> <mi>K</mi></msub></mrow><annotation encoding='application/x-tex'>\mathcal{O}_K</annotation></semantics></math> modded out by the group of principal ideals in <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒪</mi> <mi>K</mi></msub></mrow><annotation encoding='application/x-tex'>\mathcal{O}_K</annotation></semantics></math> (both groups freely generated as <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>-modules). An equivalent definition is that <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mi>K</mi></msub></mrow><annotation encoding='application/x-tex'>C_K</annotation></semantics></math> := <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Pic</mi><mo stretchy='false'>(</mo><mi>Spec</mi><mtext> </mtext><msub><mi>𝒪</mi> <mi>K</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Pic(Spec \text{ } \mathcal{O}_K)</annotation></semantics></math>.</p>
+
+<p>This was created to measure how far <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒪</mi> <mi>K</mi></msub></mrow><annotation encoding='application/x-tex'>\mathcal{O}_K</annotation></semantics></math> is from being a PID.</p>
+
+<p>More generally, for <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> a Dedekind domain, we define <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mi>R</mi></msub></mrow><annotation encoding='application/x-tex'>C_R</annotation></semantics></math> to be the group of fractional ideals of <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> modded out by the group of principal ideals (freely generated as <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Frac</mi><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Frac(R)</annotation></semantics></math>-modules). In other words, <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mi>R</mi></msub></mrow><annotation encoding='application/x-tex'>C_R</annotation></semantics></math> := <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Pic</mi><mo stretchy='false'>(</mo><mi>Spec</mi><mtext> </mtext><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Pic(Spec \text{ } R)</annotation></semantics></math>.</p>
+
+<h2 id='properties'>Properties</h2>
 
 <h3 id='relation_to_the_idele_class_group'>Relation to the idele class group</h3>
 
@@ -316,8 +323,8 @@ margin-left: 0em;
 
 <h3 id='relation_to_the_pole_of_the_zeta_function'>Relation to the pole of the zeta function</h3>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/Dedekind+zeta+function'>Dedekind zeta function</a> <math class='maruku-mathml' display='inline' id='mathml_e84fbaf7a9fbaa74eace74b450225a734d197301_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ζ</mi> <mi>K</mi></msub></mrow><annotation encoding='application/x-tex'>\zeta_K</annotation></semantics></math> of the <a class='existingWikiWord' href='/nlab/show/number+field'>number field</a> <math class='maruku-mathml' display='inline' id='mathml_e84fbaf7a9fbaa74eace74b450225a734d197301_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> has a <a class='existingWikiWord' href='/nlab/show/pole'>simple pole</a> at <math class='maruku-mathml' display='inline' id='mathml_e84fbaf7a9fbaa74eace74b450225a734d197301_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>s = 1</annotation></semantics></math>. The <em><a class='existingWikiWord' href='/nlab/show/class+number+formula'>class number formula</a></em> says that its <a class='existingWikiWord' href='/nlab/show/residue'>residue</a> there is proportional the the product of the <a class='existingWikiWord' href='/nlab/show/regulator+of+a+number+field'>regulator</a> with the <a class='existingWikiWord' href='/nlab/show/class+number'>class number</a> of <math class='maruku-mathml' display='inline' id='mathml_e84fbaf7a9fbaa74eace74b450225a734d197301_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e84fbaf7a9fbaa74eace74b450225a734d197301_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mi>lim</mi><mrow><mi>s</mi><mo>→</mo><mn>1</mn></mrow></munder><mo stretchy='false'>(</mo><mi>s</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo><msub><mi>ζ</mi> <mi>K</mi></msub><mo stretchy='false'>(</mo><mi>s</mi><mo stretchy='false'>)</mo><mo>∝</mo><msub><mi>ClassNumber</mi> <mi>K</mi></msub><mo>⋅</mo><msub><mi>Regulator</mi> <mi>K</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>The <a class='existingWikiWord' href='/nlab/show/Dedekind+zeta+function'>Dedekind zeta function</a> <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ζ</mi> <mi>K</mi></msub></mrow><annotation encoding='application/x-tex'>\zeta_K</annotation></semantics></math> of the <a class='existingWikiWord' href='/nlab/show/number+field'>number field</a> <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> has a <a class='existingWikiWord' href='/nlab/show/pole'>simple pole</a> at <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>s = 1</annotation></semantics></math>. The <em><a class='existingWikiWord' href='/nlab/show/class+number+formula'>class number formula</a></em> says that its <a class='existingWikiWord' href='/nlab/show/residue'>residue</a> there is proportional the the product of the <a class='existingWikiWord' href='/nlab/show/regulator+of+a+number+field'>regulator</a> with the <a class='existingWikiWord' href='/nlab/show/class+number'>class number</a> of <math class='maruku-mathml' display='inline' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d311627411b5ec896ac3a665428d59cecbc5619c_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mi>lim</mi><mrow><mi>s</mi><mo>→</mo><mn>1</mn></mrow></munder><mo stretchy='false'>(</mo><mi>s</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo><msub><mi>ζ</mi> <mi>K</mi></msub><mo stretchy='false'>(</mo><mi>s</mi><mo stretchy='false'>)</mo><mo>∝</mo><msub><mi>ClassNumber</mi> <mi>K</mi></msub><mo>⋅</mo><msub><mi>Regulator</mi> <mi>K</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \underset{s\to 1}{\lim} (s-1) \zeta_K(s)
   \propto
   ClassNumber_K \cdot Regulator_K
@@ -332,19 +339,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on August 25, 2014 23:50:50 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.138.168)
+  <p>
+  Last revised on May 11, 2018 at 10:33:14.
+  See the <a href="https://ncatlab.org/nlab/history/ideal class group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ideal+class+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/ideal+class+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ideal+class+group/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/ideal+class+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ideal+class+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/ideal class group/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/ideal+class+group" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/ideal+class+group" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/ideal+class+group" id="view_source" rel="nofollow">Source</a>
