--- a/pages/6798.html
+++ b/pages/6798.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussion/3213/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
@@ -769,7 +770,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -1416,7 +1417,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='chernweil_theory'><math class='maruku-mathml' display='inline' id='mathml_ed1f99c223e97e5d5671a37d40ac4b5727c36723_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Chern-Weil theory</h4>
+<h4 id='chernweil_theory'><math class='maruku-mathml' display='inline' id='mathml_1052d16bbfa053de56507a6b3121ed1cdd40cf98_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Chern-Weil theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/Chern-Weil+theory+in+Smooth%E2%88%9EGrpd'>∞-Chern-Weil theory</a></strong></p>
@@ -1524,7 +1525,7 @@ margin-left: 0em;
 </div>
 </div>
 
-<h1 id='comntents'>Comntents</h1>
+<h1 id='contents_2'>Contents</h1>
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#classification'>Classification</a></li></ul></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
@@ -1650,14 +1651,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 25, 2018 at 11:20:37.
+  Last revised on May 14, 2018 at 17:41:50.
   See the <a href="https://ncatlab.org/nlab/history/super Yang-Mills theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/super+Yang-Mills+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+Yang-Mills+theory/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/super+Yang-Mills+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+Yang-Mills+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/super+Yang-Mills+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+Yang-Mills+theory/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/super+Yang-Mills+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+Yang-Mills+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/super Yang-Mills theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
